fix: planets description overflow with scroll

--- a/css/planets.css
+++ b/css/planets.css
@@ -15,9 +15,12 @@
     background-color: rgba(1, 28, 82, 0.5);
     height: 30%;
     font-size: 0.8rem;
+    overflow: auto;
+    scrollbar-width: thin;
 }
 
 .planetSection img{
+    max-width: 100%;
     height: 600px;
     width: 600px;
     object-fit: cover;
